[project]
name = "meshtastic-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladimir Sumenko",email = "3760097@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "meshtastic (>=2.7.5,<3.0.0)",
    "pubsub (>=0.1.2,<0.2.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
